[project]
name = "segy"
version = "0.5.1.post1"  # Don't manually update; use bump-my-version
description = "The Ultimate Python SEG-Y I/O with Cloud Support and Schemas"
authors = [{ name = "Altay Sansal", email = "altay.sansal@tgs.com" }]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
keywords = ["segy", "seismic", "data", "geophysics"]
requires-python = ">=3.11,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta"
]

dependencies = [
    "fsspec (>=2024.10.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "pydantic (>=2.9.2,<3.0.0)",
    "pydantic-settings (>=2.6.1,<3.0.0)",
    "numba (>=0.62.0,<0.70.0)",
    "pandas (>=2.2.2,<3.0.0)",
    "typer (>=0.18.0,<1.0.0)",
    "rapidfuzz (>=3.10.1,<4.0.0)",
]

[project.optional-dependencies]
cloud = ["s3fs (>=2024.10.0)", "gcsfs (>=2024.10.0)", "adlfs (>=2024.7.0)"]

[project.urls]
repository = "https://github.com/TGSAI/segy"
documentation = "https://segy.readthedocs.io"

[project.scripts]
segy = "segy.cli.segy:app"

[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "coverage[toml]>=7.8.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pygments>=2.19.1",
    "pre-commit>=4.2.0",
    "pre-commit-hooks>=5.0.0",
    "typeguard>=4.4.2",
    "pandas-stubs>=2.2.3.250308",
    "xdoctest>=1.2.0",
    "s3fs>=2025.3.2",
]

docs = [
    "sphinx>=8.1.3,<8.2.0",
    "sphinx-design>=0.6.1",
    "sphinx-copybutton>=0.5.2",
    "furo>=2024.8.6",
    "myst-nb>=1.2.0",
    "linkify-it-py>=2.0.3",
    "autodoc-pydantic>=2.2.0",
    "sphinxcontrib-typer>=0.6.2",
    "matplotlib>=3.10.1",
    "s3fs>=2025.3.2",
]

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.uv]
required-version = ">=0.8.15"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "B",    # bugbear
    "I",    # isort
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "D",    # pydocstyle
    "ANN",  # annotations
    "S",    # bandit
    "A",    # builtins
    "C4",   # comprehensions
    "DTZ",  # datetimez
    "EM",   # errmsg
    "ICN",  # import-conventions
    "PIE",  # pie
    "PT",   # pytest-style
    "RSE",  # raise
    "RET",  # return
    "SIM",  # simplify
    "TID",  # tidy-imports
    "TCH",  # type-checking
    "ARG",  # unused-arguments
    "PTH",  # use-pathlib
    "TD",   # todos
    "PL",   # pylint
    "FLY",  # flynt
    "NPY",  # numpy
    "LOG",  # logging
    "G",    # logging-format
    "PERF", # perflint
]

ignore = [
    "D107",   # Missing docstring in __init__ ; should be in class docstring
]

[tool.ruff.lint.per-file-ignores]
"src/segy/standards/fields.py" = ["E501"]
"tests/*" = ["S101", "PLR2004"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pycodestyle]
max-line-length = 100
ignore-overlong-task-comments = true

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false
exclude = ["src/schema/header.py", "src/segy/ibm.py"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["segy", "tests"]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 93
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "def __repr__",
    "raise NotImplementedError",
]

[tool.mypy]
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
plugins = ["pydantic.mypy"]

# for strict mypy: (this is the tricky one)
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["fsspec.*", "numba.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.bumpversion]
current_version = "0.5.1.post1"
allow_dirty = true
commit = false
tag = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\.dev(?P<dev>\\d+))?"
serialize = [
    "{major}.{minor}.{patch}.dev{dev}", # For dev releases
    "{major}.{minor}.{patch}",          # For stable releases
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
